Fix bug where white space was showing under hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
 
 h1, h2 {
     font-family: Montserrat, sans-serif;
-    color: #0C4160;
     text-transform: uppercase;
     letter-spacing: 3px;
 }
@@ -67,7 +66,7 @@ ul li a:hover {
 /* Hero image and cover text */
 
 #hero-outer {
-    height: 100vh;
+    height: 65vh;
     width: 100%;
     overflow: hidden;
 
@@ -83,6 +82,7 @@ ul li a:hover {
     width: 100%;
     background: url('../images/hero-image.jpg') no-repeat center center;
     background-size: cover;
+    font-size: 0;
 
     /* Animates zoom effect on landing page */
     animation-name: hero-zoom;
@@ -107,8 +107,8 @@ ul li a:hover {
     text-transform: uppercase;
     letter-spacing: 3px;
 
-    width: 25vw;
-    height: 25vh;
+    width: 20vw;
+    height: 20vh;
 
     padding-top: 20px;
     padding-left: 10px;
@@ -116,18 +116,23 @@ ul li a:hover {
     background-color: rgba(12, 65, 96, .7);
 
     bottom: 20px;
-    top: 165px;
+    top: 200px;
     right: 100px;
 
     position: absolute;
 }
 
-h2 {
+#call-to-action {
+    padding-top: 5%;
     text-align: center;
+    font-size: 100%;
 }
 
-h3 {
-    font-size: smaller;
-    text-align: center;
-    padding-top: 10px;
+/* About us section */
+
+#about-us {
+    color: #fff;
+    background-color: #0C4160;
+    height: 50vh;
+    width: 100%;
 }
